src/org/api/core/1.3.15/index.md
---
title: "@imqueue/core 1.3.15 · API reference"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/1.3.15/)

## core package

## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ClusteredRedisQueue](/api/core/1.3.15/core.clusteredredisqueue/)


</td><td>

Class ClusteredRedisQueue Implements possibility to scale queues horizontally between several redis instances.


</td></tr>
<tr><td>

[IMQ](/api/core/1.3.15/core.imq/)


</td><td>

Message Queue Factory


</td></tr>
<tr><td>

[RedisQueue](/api/core/1.3.15/core.redisqueue/)


</td><td>

Class RedisQueue Implements simple messaging queue over redis.


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[buildOptions(defaultOptions, givenOptions)](/api/core/1.3.15/core.buildoptions/)


</td><td>

Safely builds full options definition using default options and partial given options


</td></tr>
<tr><td>

[intrand(min, max)](/api/core/1.3.15/core.intrand/)


</td><td>

Returns random integer between given min and max


</td></tr>
<tr><td>

[logDebugInfo({ debugTime, debugArgs, className, args, methodName, start, logger, }, input)](/api/core/1.3.15/core.logdebuginfo/)


</td><td>

Prints debug information


</td></tr>
<tr><td>

[pack(data)](/api/core/1.3.15/core.pack/)


</td><td>

Compress given data and returns binary string


</td></tr>
<tr><td>

[profile(enableDebugTime, enableDebugArgs)](/api/core/1.3.15/core.profile/)


</td><td>

Implements '<!-- -->@<!-- -->profile' decorator.


</td></tr>
<tr><td>

[promisify(obj, restrict)](/api/core/1.3.15/core.promisify/)


</td><td>

Makes given object methods promise-like


</td></tr>
<tr><td>

[propertiesOf(obj)](/api/core/1.3.15/core.propertiesof/)


</td><td>

Returns entire list of the given object properties including entire prototype chain


</td></tr>
<tr><td>

[sha1(str)](/api/core/1.3.15/core.sha1/)


</td><td>

Returns SHA1 hash sum of the given string


</td></tr>
<tr><td>

[unpack(data)](/api/core/1.3.15/core.unpack/)


</td><td>

Decompress binary string and returns plain data


</td></tr>
<tr><td>

[uuid()](/api/core/1.3.15/core.uuid/)


</td><td>

Generates and returns Unified Unique Identifier


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[DebugInfoOptions](/api/core/1.3.15/core.debuginfooptions/)


</td><td>


</td></tr>
<tr><td>

[IJson](/api/core/1.3.15/core.ijson/)


</td><td>

JSON-compatible type definition

 {<!-- -->any<!-- -->}


</td></tr>
<tr><td>

[ILogger](/api/core/1.3.15/core.ilogger/)


</td><td>

Logger interface


</td></tr>
<tr><td>

[IMessage](/api/core/1.3.15/core.imessage/)


</td><td>

Defines message format.

 {<!-- -->IMessage<!-- -->}


</td></tr>
<tr><td>

[IMessageQueue](/api/core/1.3.15/core.imessagequeue/)


</td><td>

Generic messaging queue implementation interface


</td></tr>
<tr><td>

[IMessageQueueConstructor](/api/core/1.3.15/core.imessagequeueconstructor/)


</td><td>


</td></tr>
<tr><td>

[IMQOptions](/api/core/1.3.15/core.imqoptions/)


</td><td>

Message queue options


</td></tr>
<tr><td>

[IMulti](/api/core/1.3.15/core.imulti/)


</td><td>

Extends default Multi type to allow dynamic properties access on it

 {<!-- -->IMulti<!-- -->}


</td></tr>
<tr><td>

[IRedisClient](/api/core/1.3.15/core.iredisclient/)


</td><td>

Extends default RedisClient type to allow dynamic properties access on it

 {<!-- -->IRedisClient<!-- -->}


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[DEFAULT\_IMQ\_OPTIONS](/api/core/1.3.15/core.default_imq_options/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_LOG\_ARGS](/api/core/1.3.15/core.imq_log_args/)


</td><td>

Environment variable IMQ\_LOG\_ARGS=\[1, 0\] - enables/disables profiled call arguments to be logged

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[IMQ\_LOG\_TIME\_FORMAT](/api/core/1.3.15/core.imq_log_time_format/)


</td><td>

Environment variable IMQ\_LOG\_TIME\_FORMAT=\[ 'microseconds', 'milliseconds', 'seconds' \]. Specifies profiled time logging format, by default is 'microseconds'

 {<!-- -->AllowedTimeFormat \| string<!-- -->}


</td></tr>
<tr><td>

[IMQ\_LOG\_TIME](/api/core/1.3.15/core.imq_log_time/)


</td><td>

Environment variable IMQ\_LOG\_TIME=\[1, 0\] - enables/disables profiled timings logging

 {<!-- -->boolean<!-- -->}


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AllowedTimeFormat](/api/core/1.3.15/core.allowedtimeformat/)


</td><td>


</td></tr>
</tbody></table>

